--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>59824dbe-9580-48da-a6c6-0e2c643fa39b</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Treetcode</title>
+    <meta name="description" content="Treetcode - Leetcode but with true real life data" />
+    <meta name="author" content="Nathan N." />
 
-    <meta property="og:title" content="59824dbe-9580-48da-a6c6-0e2c643fa39b" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Treetcode" />
+    <meta property="og:description" content="Treetcode - Leetcode but with true real life data" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
+    <meta property="og:image" content="/lovable-uploads/treetcode-logo.png" />
+
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
+    <meta name="twitter:image" content="/lovable-uploads/treetcode-logo.png" />
   </head>
 
   <body>
