Updated EmailSignup.tsx logic

--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <form name="treetcode-updates" netlify netlify-honeypot="bot-field" hidden>
+      <input type="email" name="email" />
+    </form>
   </body>
 </html>
