updated index.html so favicon is explicity the treetcode logo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="description" content="Treetcode - Leetcode but with true real life data" />
     <meta name="author" content="Nathan N." />
 
+    <link rel="icon" type="image/png" href="/lovable-uploads/treetcode-logo.png" />
+    <link rel="apple-touch-icon" href="/lovable-uploads/treetcode-logo.png" />
+
     <meta property="og:title" content="Treetcode" />
     <meta property="og:description" content="Treetcode - Leetcode but with true real life data" />
     <meta property="og:type" content="website" />
